--- a/di-16-zhang-fu-wu-qi/16.10.md
+++ b/di-16-zhang-fu-wu-qi/16.10.md
@@ -660,6 +660,19 @@ Checking GitLab subtasks ... Finished
 service gitlab restart
 ```
 
+
+## 故障排除
+
+### 日志
+
+- `/var/log/nginx/gitlab_error.log`
+- `/var/log/nginx/error.log`
+- `/var/log/gitlab_pages.log`
+- `/var/log/gitlab-shell/gitlab-shell.log`
+
+### `500: We're sorry, something went wrong on our end`
+
+
 ```
 root@ykla:/ # service gitlab status
 The GitLab web server with pid 8202 is running.
@@ -669,3 +682,31 @@ Gitaly with pid 8218 is running.
 GitLab and all its components are up and running.
 ```
 
+
+如果运行状态和错误日志均正常，那么可能是内存溢出了（8G 也不够）：
+
+
+```
+# dmesg
+
+……省略……
+
+
+swap_pager: out of swap space
+swp_pager_getswapspace(11): failed
+swap_pager: out of swap space
+swp_pager_getswapspace(27): failed
+swp_pager_getswapspace(11): failed
+swp_pager_getswapspace(4): failed
+swp_pager_getswapspace(1): failed
+swp_pager_getswapspace(9): failed
+swp_pager_getswapspace(1): failed
+swp_pager_getswapspace(20): failed
+swp_pager_getswapspace(4): failed
+pid 7965 (node), jid 0, uid 211, was killed: failed to reclaim memory
+pid 7822 (ruby32), jid 0, uid 211, was killed: failed to reclaim memory
+```
+
+#### 参考文献
+
+- [CentOS 7 上 GitLab 的安装、备份、迁移及恢复](https://www.ifeegoo.com/the-installation-backup-migration-restore-of-gitlab-on-centos-7.html)
