--- a/di-16-zhang-fu-wu-qi/16.10.md
+++ b/di-16-zhang-fu-wu-qi/16.10.md
@@ -88,12 +88,16 @@ CREATE DATABASE
 $ psql -U git -d gitlabhq_production
 psql (16.8)
 Type "help" for help.
-
-gitlabhq_production=# psql -U postgres -d gitlabhq_production -c "CREATE EXTENSION IF NOT EXISTS pg_trgm;"
-gitlabhq_production-# psql -U postgres -d gitlabhq_production -c "CREATE EXTENSION IF NOT EXISTS btree_gist;"
-gitlabhq_production-# psql -U postgres -d gitlabhq_production -c "CREATE EXTENSION IF NOT EXISTS plpgsql;"
 gitlabhq_production-# \q
 $ exit
+```
+
+切换回 `root`：
+
+```sql
+# psql -U postgres -d gitlabhq_production -c "CREATE EXTENSION IF NOT EXISTS pg_trgm;"
+# psql -U postgres -d gitlabhq_production -c "CREATE EXTENSION IF NOT EXISTS btree_gist;"
+# psql -U postgres -d gitlabhq_production -c "CREATE EXTENSION IF NOT EXISTS plpgsql;"
 ```
 
 ## 配置 Redis
