--- a/di-16-zhang-fu-wu-qi/16.10.md
+++ b/di-16-zhang-fu-wu-qi/16.10.md
@@ -492,6 +492,11 @@ Done in 109.27s.
 
 ```
 # su -l git -c "cd /usr/local/www/gitlab && RAILS_ENV=production NODE_ENV=production USE_DB=false SKIP_STORAGE_VALIDATION=true bundle exec rake gitlab:assets:compile"
+
+……此处省略大概需要几十分钟，若提示内存溢出，自行增加 swap……
+
+The file does not introduce any side effects, we are all good.
+`gitlab:assets:check_page_bundle_mixins_css_for_sideeffects` finished in 0.371513498 seconds
 ```
 
 - 移除数据库超级管理员
