--- a/di-16-zhang-fu-wu-qi/16.10.md
+++ b/di-16-zhang-fu-wu-qi/16.10.md
@@ -1,4 +1,4 @@
-# 第 16.10 节 Gitlab-EE
+# 第 16.10 节 Gitlab-EE 17
 
 ## 安装 Gitlab-EE
 
@@ -57,13 +57,13 @@ https://gitlab.com/mfechner/freebsd-gitlab-docu/blob/master/update/freebsd_patch
 
 当前 Gitlab 支持的 PostgreSQL 版本为 16 或更高版本
 
-```
+```sh
 # pkg install postgresql16-server postgresql16-contrib
 ```
 
 或
 
-```
+```sh
 # cd /usr/ports/databases/postgresql16-server/ && make install clean
 # cd /usr/ports/databases/postgresql16-contrib/ && make install clean
 ```
@@ -126,7 +126,7 @@ root@ykla:/ # echo 'unixsocketperm 770' >> /usr/local/etc/redis.conf
 
 ### 配置服务
 
-```
+```sh
 root@ykla:/ # service redis enable
 redis enabled in /etc/rc.conf
 root@ykla:/ # service redis restart
@@ -138,7 +138,7 @@ Starting redis.
 
 将 `git` 用户加入 `redis` 组
 
-```
+```sh
 # pw groupmod redis -m git
 ```
 
@@ -179,11 +179,11 @@ hw.ncpu: 16
 
 - GitLab 需要写入权限来创建符号链接：
 
-```
+```sh
 # chown git /usr/local/share/gitlab-shell  
 ```
 
-```
+```sh
 root@ykla:/ #cd /usr/local/www/gitlab # 注意路径
 root@ykla:/usr/local/www/gitlab # su -l git -c "cd /usr/local/www/gitlab && rake gitlab:setup RAILS_ENV=production" #  初始化 GitLab 数据库和相关配置
 Missing Rails.application.credentials.secret_key_base for production environment. The secret will be generated and stored in config/secrets.yml.
@@ -260,7 +260,7 @@ OK
 
 撤销刚才授予的权限：
 
-```
+```sh
 # chown root /usr/local/share/gitlab-shell
 ```
 
@@ -392,11 +392,11 @@ Tasks: TOP => gitlab:env:info
 
 - 如果使用 corepack（Node.js）
 
-```
+```sh
 root@ykla:/ # chown git /usr/local/www/gitlab/package.json
 ```
 
-```
+```sh
 root@ykla:/ # ls /usr/local/bin/python3.11
 /usr/local/bin/python3.11
 root@ykla:/ # su -l git -c "cd /usr/local/www/gitlab && yarn config set python /usr/local/bin/python3.11"
@@ -405,7 +405,7 @@ success Set "python" to "/usr/local/bin/python3.11".
 Done in 0.03s.
 ```
 
-```
+```sh
 root@ykla:/ # su -l git -c "cd /usr/local/www/gitlab && yarn install --production --pure-lockfile"
 yarn install v1.22.19
 $ node ./scripts/frontend/preinstall.mjs
@@ -490,10 +490,10 @@ Done in 109.27s.
 ```
 
 
-```
+```sh
 # su -l git -c "cd /usr/local/www/gitlab && RAILS_ENV=production NODE_ENV=production USE_DB=false SKIP_STORAGE_VALIDATION=true bundle exec rake gitlab:assets:compile"
 
-……此处省略大概需要几十分钟，若提示内存溢出，自行增加 swap……
+……此处省略大概需要几十分钟，若提示内存溢出，自行增加 swap，一般来说需要执行两次，若内存溢出需要再重复执行一次……
 
 The file does not introduce any side effects, we are all good.
 `gitlab:assets:check_page_bundle_mixins_css_for_sideeffects` finished in 0.371513498 seconds
@@ -519,7 +519,6 @@ The GitLab Sidekiq job dispatcher with pid 8212 is running.
 The GitLab Workhorse with pid 8216 is running.
 Gitaly with pid 8218 is running.
 GitLab and all its components are up and running.
-
 ```
 
 ## Nginx
@@ -559,7 +558,7 @@ http {
 
 ## 配置服务
 
-```
+```sh
 root@ykla:/ # service nginx enable
 nginx enabled in /etc/rc.conf
 root@ykla:/ #  service nginx start
@@ -571,7 +570,7 @@ Starting nginx.
 
 ## 配置 Gitlab Pages
 
-```
+```sh
 root@ykla:/ # su -l git -c "openssl rand -base64 32 > /usr/local/www/gitlab/.gitlab_pages_secret"
 root@ykla:/ # chmod 640 /usr/local/www/gitlab/.gitlab_pages_secret
 root@ykla:/ # chgrp gitlab-pages /usr/local/www/gitlab/.gitlab_pages_secret
@@ -579,7 +578,7 @@ root@ykla:/ # chgrp gitlab-pages /usr/local/www/gitlab/.gitlab_pages_secret
 
 ### 启动服务
 
-```
+```sh
 # sysrc gitlab_pages_enable="YES"
 # service gitlab_pages start
 ```
@@ -665,12 +664,257 @@ Checking GitLab App ... Finished
 Checking GitLab subtasks ... Finished
 ```
 
+
+## 启动 Gitlab
+
+```sh
+# service gitlab restart
 ```
-service gitlab restart
+
+打开浏览器输入 IP 回车，此处我的是 `192.168.197.128`：
+
+![](../.gitbook/assets/gitlab1.png)
+
+请输入你的电子邮箱、并设置密码（最小 8 位，要求复杂密码）。
+
+![](../.gitbook/assets/gitlab2.png)
+
+登录：
+
+![](../.gitbook/assets/gitlab3.png)
+
+
+
+## 设置中文
+
+点击头像，再点击“Preference”，找到“Localization”，选择简体中文，然后点击“Save changes”：
+
+
+![](../.gitbook/assets/gitlab4.png)
+
+![](../.gitbook/assets/gitlab9.png)
+
+## 激活
+
+安装 `gitlab-license`（gem 是 ruby 包管理器，上面已经作为依赖自动安装了）：
+
+```sh
+root@ykla:~ # gem install gitlab-license
+Fetching gitlab-license-2.6.0.gem
+Successfully installed gitlab-license-2.6.0
+Parsing documentation for gitlab-license-2.6.0
+Installing ri documentation for gitlab-license-2.6.0
+Done installing documentation for gitlab-license after 0 seconds
+1 gem installed
+
+A new release of RubyGems is available: 3.6.4 → 3.6.5!
+Run `gem update --system 3.6.5` to update your installation.
 ```
+
+```sh
+root@ykla:~ # mkdir gitlab-license
+root@ykla:~ # cd gitlab-license/
+root@ykla:~/gitlab-license # ee license.rb
+```
+
+将以下文件写入 `license.rb`
+
+```ruby
+require "openssl"
+require "gitlab/license"
+key_pair = OpenSSL::PKey::RSA.generate(2048)
+File.open("license_key", "w") { |f| f.write(key_pair.to_pem) }
+public_key = key_pair.public_key
+File.open("license_key.pub", "w") { |f| f.write(public_key.to_pem) }
+private_key = OpenSSL::PKey::RSA.new File.read("license_key")
+Gitlab::License.encryption_key = private_key
+license = Gitlab::License.new
+license.licensee = {
+"Name" => "ykla", # 你的用户名
+"Company" => "CFC", # 你的机构
+"Email" => "yklaxds@gmail.com", # 你的电子邮箱
+}
+license.starts_at = Date.new(2025, 1, 1) # 开始时间
+license.expires_at = Date.new(2050, 1, 1) # 结束时间
+license.notify_admins_at = Date.new(2049, 12, 1)
+license.notify_users_at = Date.new(2049, 12, 1)
+license.block_changes_at = Date.new(2050, 1, 1)
+license.restrictions = {
+active_user_count: 10000,
+}
+puts "License:"
+puts license
+data = license.export
+puts "Exported license:"
+puts data
+File.open("GitLabBV.gitlab-license", "w") { |f| f.write(data) }
+public_key = OpenSSL::PKey::RSA.new File.read("license_key.pub")
+Gitlab::License.encryption_key = public_key
+data = File.read("GitLabBV.gitlab-license")
+$license = Gitlab::License.import(data)
+puts "Imported license:"
+puts $license
+unless $license
+raise "The license is invalid."
+end
+if $license.restricted?(:active_user_count)
+active_user_count = 10000
+if active_user_count > $license.restrictions[:active_user_count]
+    raise "The active user count exceeds the allowed amount!"
+end
+end
+if $license.notify_admins?
+puts "The license is due to expire on #{$license.expires_at}."
+end
+if $license.notify_users?
+puts "The license is due to expire on #{$license.expires_at}."
+end
+module Gitlab
+class GitAccess
+    def check(cmd, changes = nil)
+    if $license.block_changes?
+        return build_status_object(false, "License expired")
+    end
+    end
+end
+end
+puts "This instance of GitLab Enterprise Edition is licensed to:"
+$license.licensee.each do |key, value|
+puts "#{key}: #{value}"
+end
+if $license.expired?
+puts "The license expired on #{$license.expires_at}"
+elsif $license.will_expire?
+puts "The license will expire on #{$license.expires_at}"
+else
+puts "The license will never expire."
+end
+```
+
+生成相关文件：
+
+```ruby
+root@ykla:~/gitlab-license # ruby license.rb 
+License:
+#<Gitlab::License:0x00001333815f0f88>
+Exported license:
+eyJkYXRhIjoiZlhQdzNWWldFOTIrcHFrNUx1MlZqQXBaZkpQVi9yaHJxN0cy
+T2pVK3dYZGk4dllHM1JTblR3S2N2YTYyXG5LTTJFVmlpMU1iZTZaaHFmOTJu
+ZGRucTlpbHdRZ05OODZINkV2NCttbWx1bW95UnYyYVhtSjhPSkZjRzVcbjll
+SXU1dWdJcU1jUkliQ1pNSUJ6U2cvWlJvV1dDbm9pc0E5RGxrMkk2MS9zS0Vx
+dHBQc05WTDZ4V3N4MFxuL0Z6WVRTZFZkYUJjYURXRGhodHJkVm53SWZWcFBN
+OS9kcU1Cb2V2OHZ1MHA0VmRXKzNMMkJWMkxTK0NaXG41eTlaVDRlV0dUWGNE
+SFJXNC8vZWhpUC9hQnhqWitBdHVkc2lkNE40aVdqcVpwYnNXSmE5WmpEUVpk
+OFFcbit2TitZU0N2ZUFoMDFTZHBFVUQyL01ITm5lWWlOM1A2aDlSRjdOWS80
+NjFEQXM0ZitxOEFEY3pVR2dNZlxud0pCTUViNnZldGtRK3VmRXJLQU1Ldlp3
+MmRMWWMzcWhhbll2Z1dzaDAzSlAvYUxrWkxTN0VOTmpoUnZuXG5CUFJzdENa
+K1UreU95K0dyRGszeXI0RVFBK2hraDI3ZWNaVmRyb0FaVisxWGJSTXlsYW1y
+ZnVZTXNQdzZcblBzY2NMRk5vaDRKTkFvSEtFZHI1UG5uQWs2djR3QU5XQVYv
+TDJkdjE5V1pnOVpGd0NaNjlYaTJ1M1R3dlxuNTUxUjFHZXUrV3pWaFB5V28z
+YXNDeHRBNnhRakhONjRTRmZZejhLdjRFUzdMMkgyU1FiSDN4eTV1dTVYXG5F
+c0tXMGRQZTRCcUxWTzZGT1ROWVJINzViSEVqWk90NHNvaWp1VHpLWW1YdU5s
+MjkyZlRndzgvVnZwQU9cbjFoZnQ0Ymh5WmlUZ2t3RVFNMnFBQUdOaUJ5THU5
+ZUVoTUhzdWQ1NUNrUWp6bHZLc1lXV1FIWENVdDBjQ1xuRlBuSHd4Nm9HNWxU
+dzlTVUFzS015YVloaWk0WGhGR3VYSXErSy9OMStCaXlQL3pnVVNsbEhrS2da
+cisyXG5ZQVBvZm5mVVZ3PT1cbiIsImtleSI6IkF5Sy9WQnROYTcxV3lyWFV0
+dkRwZVFyaVh3Y3JtYXB3T0tIejNwMkpoK3REYjZnNm0veHgzbStSVWFpL1xu
+ZWliUnJhNkZLc0dCSitvczBpelltcUJDVjRRZEFBbHhBTFczeW5rSTh2M00r
+TFRwQzViNTNzN2ZoOXdkXG4weXFYUDk3djNpTS9KcXNGWGpzQTZ1cWtFRFRs
+eWxQSnpVbS9sRWtZNG1ZT1VzS09YSVU2cithbWFnRDRcblRZR1MvTVI5L3Mz
+eXlQblY0My96SlZmazZWdWtiY1NIRXFGbnhCYnoxMitBWE9NQ2U4WTM0RGV5
+eGxXL1xuQkxDN2R0cHcvRGlLSXFQM3BpWnNJOEQ4dVdVUGVmNFpvaS9xZTJm
+Q2hNd0ViZFJCNFlpK3R2M1dYMS9LXG4xendIMEVNWFJhT3dPN1BUaDd2Mngx
+NVhvSTNxZTN3STFjNTFyOUFJeGc9PVxuIiwiaXYiOiIzcDByN01MelpSck10
+K2YwbWhobEpRPT1cbiJ9
+Imported license:
+#<Gitlab::License:0x0000133381f3ece8>
+This instance of GitLab Enterprise Edition is licensed to:
+Name: ykla
+Company: CFC
+Email: yklaxds@gmail.com
+The license will expire on 2050-01-01
+```
+
+备份旧的公钥：
+
+```sh
+# cp /usr/local/www/gitlab/.license_encryption_key.pub /usr/local/www/gitlab/.license_encryption_key.pub.back
+```
+
+查看目录下文件。新生成了三个东西：
+
+```sh
+root@ykla:~/gitlab-license # ls
+GitLabBV.gitlab-license	license_key
+license.rb		license_key.pub
+```
+
+用破解的公钥替代原有公钥：
+
+```sh
+root@ykla:~/gitlab-license # cp license_key.pub /usr/local/www/gitlab/.license_encryption_key.pub
+```
+
+```sh
+root@ykla:~/gitlab-license # cat GitLabBV.gitlab-license
+eyJkYXRhIjoiZlhQdzNWWldFOTIrcHFrNUx1MlZqQXBaZkpQVi9yaHJxN0cy
+T2pVK3dYZGk4dllHM1JTblR3S2N2YTYyXG5LTTJFVmlpMU1iZTZaaHFmOTJu
+ZGRucTlpbHdRZ05OODZINkV2NCttbWx1bW95UnYyYVhtSjhPSkZjRzVcbjll
+SXU1dWdJcU1jUkliQ1pNSUJ6U2cvWlJvV1dDbm9pc0E5RGxrMkk2MS9zS0Vx
+dHBQc05WTDZ4V3N4MFxuL0Z6WVRTZFZkYUJjYURXRGhodHJkVm53SWZWcFBN
+OS9kcU1Cb2V2OHZ1MHA0VmRXKzNMMkJWMkxTK0NaXG41eTlaVDRlV0dUWGNE
+SFJXNC8vZWhpUC9hQnhqWitBdHVkc2lkNE40aVdqcVpwYnNXSmE5WmpEUVpk
+OFFcbit2TitZU0N2ZUFoMDFTZHBFVUQyL01ITm5lWWlOM1A2aDlSRjdOWS80
+NjFEQXM0ZitxOEFEY3pVR2dNZlxud0pCTUViNnZldGtRK3VmRXJLQU1Ldlp3
+MmRMWWMzcWhhbll2Z1dzaDAzSlAvYUxrWkxTN0VOTmpoUnZuXG5CUFJzdENa
+K1UreU95K0dyRGszeXI0RVFBK2hraDI3ZWNaVmRyb0FaVisxWGJSTXlsYW1y
+ZnVZTXNQdzZcblBzY2NMRk5vaDRKTkFvSEtFZHI1UG5uQWs2djR3QU5XQVYv
+TDJkdjE5V1pnOVpGd0NaNjlYaTJ1M1R3dlxuNTUxUjFHZXUrV3pWaFB5V28z
+YXNDeHRBNnhRakhONjRTRmZZejhLdjRFUzdMMkgyU1FiSDN4eTV1dTVYXG5F
+c0tXMGRQZTRCcUxWTzZGT1ROWVJINzViSEVqWk90NHNvaWp1VHpLWW1YdU5s
+MjkyZlRndzgvVnZwQU9cbjFoZnQ0Ymh5WmlUZ2t3RVFNMnFBQUdOaUJ5THU5
+ZUVoTUhzdWQ1NUNrUWp6bHZLc1lXV1FIWENVdDBjQ1xuRlBuSHd4Nm9HNWxU
+dzlTVUFzS015YVloaWk0WGhGR3VYSXErSy9OMStCaXlQL3pnVVNsbEhrS2da
+cisyXG5ZQVBvZm5mVVZ3PT1cbiIsImtleSI6IkF5Sy9WQnROYTcxV3lyWFV0
+dkRwZVFyaVh3Y3JtYXB3T0tIejNwMkpoK3REYjZnNm0veHgzbStSVWFpL1xu
+ZWliUnJhNkZLc0dCSitvczBpelltcUJDVjRRZEFBbHhBTFczeW5rSTh2M00r
+TFRwQzViNTNzN2ZoOXdkXG4weXFYUDk3djNpTS9KcXNGWGpzQTZ1cWtFRFRs
+eWxQSnpVbS9sRWtZNG1ZT1VzS09YSVU2cithbWFnRDRcblRZR1MvTVI5L3Mz
+eXlQblY0My96SlZmazZWdWtiY1NIRXFGbnhCYnoxMitBWE9NQ2U4WTM0RGV5
+eGxXL1xuQkxDN2R0cHcvRGlLSXFQM3BpWnNJOEQ4dVdVUGVmNFpvaS9xZTJm
+Q2hNd0ViZFJCNFlpK3R2M1dYMS9LXG4xendIMEVNWFJhT3dPN1BUaDd2Mngx
+NVhvSTNxZTN3STFjNTFyOUFJeGc9PVxuIiwiaXYiOiIzcDByN01MelpSck10
+K2YwbWhobEpRPT1cbiJ9
+```
+
+打开 <http://192.168.197.128/admin/application_settings/general>（这是我的，注意改成你的 IP 地址），点击“添加许可证”，点击“请输入许可证密钥”，把上面 `GitLabBV.gitlab-license` 复制到许可证秘钥框里：
+
+### 参考文献
+
+[GitLab EE 16 安装破解教程](https://blog.mengguyi.com/articles/GitLab-Install.html)
+
+
+## 导入外部项目
+
+打开 <http://192.168.197.128/admin>，点击“通用”，选择右侧“导入和导出设置”，选择所需的项目，保存。
+
+![](../.gitbook/assets/gitlab5.png)
+
+
+![](../.gitbook/assets/gitlab6.png)
+
+
+![](../.gitbook/assets/gitlab7.png)
+
+### 参考文献
+
+- [CI/CD 笔记 .Gitlab 系列：2024 更新后-设置 GitLab 导入源](https://bbs.huaweicloud.com/blogs/423539)
+
 
 
 ## 故障排除
+
+###
 
 ### 日志
 
@@ -716,6 +960,10 @@ pid 7965 (node), jid 0, uid 211, was killed: failed to reclaim memory
 pid 7822 (ruby32), jid 0, uid 211, was killed: failed to reclaim memory
 ```
 
+如果还是报错 500，建议重来一次。
+
 #### 参考文献
 
 - [CentOS 7 上 GitLab 的安装、备份、迁移及恢复](https://www.ifeegoo.com/the-installation-backup-migration-restore-of-gitlab-on-centos-7.html)
+
+
