--- a/di-16-zhang-fu-wu-qi/16.10.md
+++ b/di-16-zhang-fu-wu-qi/16.10.md
@@ -889,6 +889,8 @@ K2YwbWhobEpRPT1cbiJ9
 
 打开 <http://192.168.197.128/admin/application_settings/general>（这是我的，注意改成你的 IP 地址），点击“添加许可证”，点击“请输入许可证密钥”，把上面 `GitLabBV.gitlab-license` 复制到许可证秘钥框里：
 
+![](../.gitbook/assets/gitlab8.png)
+
 ### 参考文献
 
 [GitLab EE 16 安装破解教程](https://blog.mengguyi.com/articles/GitLab-Install.html)
@@ -914,7 +916,6 @@ K2YwbWhobEpRPT1cbiJ9
 
 ## 故障排除
 
-###
 
 ### 日志
 
