--- a/di-16-zhang-fu-wu-qi/16.10.md
+++ b/di-16-zhang-fu-wu-qi/16.10.md
@@ -671,11 +671,9 @@ Checking GitLab subtasks ... Finished
 # service gitlab restart
 ```
 
-打开浏览器输入 IP 回车，此处我的是 `192.168.197.128`：
+打开浏览器输入 IP 回车，此处我的是 `192.168.197.128`。请输入你的电子邮箱、并设置密码（最小 8 位，要求复杂密码）。
 
 ![](../.gitbook/assets/gitlab1.png)
-
-请输入你的电子邮箱、并设置密码（最小 8 位，要求复杂密码）。
 
 ![](../.gitbook/assets/gitlab2.png)
 
@@ -887,7 +885,9 @@ NVhvSTNxZTN3STFjNTFyOUFJeGc9PVxuIiwiaXYiOiIzcDByN01MelpSck10
 K2YwbWhobEpRPT1cbiJ9
 ```
 
-打开 <http://192.168.197.128/admin/application_settings/general>（这是我的，注意改成你的 IP 地址），点击“添加许可证”，点击“请输入许可证密钥”，把上面 `GitLabBV.gitlab-license` 复制到许可证秘钥框里：
+打开 <http://192.168.197.128/admin/application_settings/general>（这是我的，注意改成你的 IP 地址），点击“添加许可证”，点击“请输入许可证密钥”，把上面 `GitLabBV.gitlab-license` 输出的内容复制到许可证秘钥框里：
+
+![](../.gitbook/assets/gitlab10.png)
 
 ![](../.gitbook/assets/gitlab8.png)
 
