--- a/di-16-zhang-fu-wu-qi/16.10.md
+++ b/di-16-zhang-fu-wu-qi/16.10.md
@@ -92,9 +92,9 @@ gitlabhq_production-# \q
 $ exit
 ```
 
-切换回 `root`：
+### 切换回 `root`
 
-```sql
+```sh
 # psql -U postgres -d gitlabhq_production -c "CREATE EXTENSION IF NOT EXISTS pg_trgm;"
 # psql -U postgres -d gitlabhq_production -c "CREATE EXTENSION IF NOT EXISTS btree_gist;"
 # psql -U postgres -d gitlabhq_production -c "CREATE EXTENSION IF NOT EXISTS plpgsql;"
