--- a/di-16-zhang-fu-wu-qi/16.10.md
+++ b/di-16-zhang-fu-wu-qi/16.10.md
@@ -392,18 +392,28 @@ Tasks: TOP => gitlab:env:info
 
 - 如果使用 corepack（Node.js）
 
+授权：
+
 ```sh
 root@ykla:/ # chown git /usr/local/www/gitlab/package.json
 ```
 
+设置 Python 版本，设置前用 `ls` 先看看：
 ```sh
 root@ykla:/ # ls /usr/local/bin/python3.11
 /usr/local/bin/python3.11
+```
+
+确认版本后：
+
+```
 root@ykla:/ # su -l git -c "cd /usr/local/www/gitlab && yarn config set python /usr/local/bin/python3.11"
 yarn config v1.22.19
 success Set "python" to "/usr/local/bin/python3.11".
 Done in 0.03s.
 ```
+
+编译资源：
 
 ```sh
 root@ykla:/ # su -l git -c "cd /usr/local/www/gitlab && yarn install --production --pure-lockfile"
@@ -489,6 +499,7 @@ warning Your current version of Yarn is out of date. The latest version is "1.22
 Done in 109.27s.
 ```
 
+继续编译资源：
 
 ```sh
 # su -l git -c "cd /usr/local/www/gitlab && RAILS_ENV=production NODE_ENV=production USE_DB=false SKIP_STORAGE_VALIDATION=true bundle exec rake gitlab:assets:compile"
