--- a/di-16-zhang-fu-wu-qi/16.10.md
+++ b/di-16-zhang-fu-wu-qi/16.10.md
@@ -686,9 +686,9 @@ Checking GitLab subtasks ... Finished
 
 ![](../.gitbook/assets/gitlab1.png)
 
-![](../.gitbook/assets/gitlab2.png)
-
 登录：
+
+![](../.gitbook/assets/gitlab2.png)
 
 ![](../.gitbook/assets/gitlab3.png)
 
@@ -704,6 +704,10 @@ Checking GitLab subtasks ... Finished
 ![](../.gitbook/assets/gitlab9.png)
 
 ## 激活
+
+>**警告**
+>
+>此部分仅供个人学习参考，我们不承担任何责任，请勿用做商业用途。请你支持正版。[点此购买许可证](https://about.gitlab.com/pricing/)。
 
 安装 `gitlab-license`（gem 是 ruby 包管理器，上面已经作为依赖自动安装了）：
 
