--- a/di-16-zhang-fu-wu-qi/16.10.md
+++ b/di-16-zhang-fu-wu-qi/16.10.md
@@ -900,7 +900,7 @@ NVhvSTNxZTN3STFjNTFyOUFJeGc9PVxuIiwiaXYiOiIzcDByN01MelpSck10
 K2YwbWhobEpRPT1cbiJ9
 ```
 
-打开 <http://192.168.197.128/admin/application_settings/general>（这是我的，注意改成你的 IP 地址），点击“添加许可证”，点击“请输入许可证密钥”，把上面 `GitLabBV.gitlab-license` 输出的内容复制到许可证秘钥框里：
+打开 <http://192.168.197.128/admin/application_settings/general>（这是我的，注意改成你的 IP 地址），点击“添加许可证”，点击“请输入许可证密钥”，把上面 `GitLabBV.gitlab-license` 输出的内容复制到许可证框里：
 
 ![](../.gitbook/assets/gitlab10.png)
 
