--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.8-jie-postgresql-yu-pgadmin4.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.8-jie-postgresql-yu-pgadmin4.md
@@ -114,7 +114,7 @@ root@ykla:~ #
 ### 初始化数据库
 
 ```sh
-/usr/local/etc/rc.d/postgresql initdb
+# service postgresql initdb
 ```
 
 示例输出：
@@ -173,7 +173,7 @@ psql: FATAL:  role "root" does not exist
 root@ykla:~ # su - postgres
 
 #启动服务
-$ /usr/local/bin/pg_ctl -D /var/db/postgres/data96 -l logfile start
+$ /usr/local/bin/pg_ctl -D /var/db/postgres/data16 -l logfile start
 
 #创建新用户 ykla，并设置密码
 $ createuser -sdrP ykla
