--- a/di-16-zhang-fu-wu-qi/16.10.md
+++ b/di-16-zhang-fu-wu-qi/16.10.md
@@ -8,7 +8,7 @@
 
 或使用 Ports：
 
-该 Port 同时包含 Gitlab CE（社区版），要安装 EE（企业版），必须指定 `FLAVORS=gitlab-ee`：
+该 Port 同时包含 Gitlab CE（社区版），要安装 EE（企业版），必须指定 `FLAVORS=ee`：
 
 ```sh
 # cd /usr/ports/www/gitlab/
