--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.5-jie-java-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.5-jie-java-huan-jing-de-pei-zhi.md
@@ -1,6 +1,117 @@
 # 第 22.5 节 Java 环境的配置
 
-FreeBSD 支持 oracle jdk 与 openjdk。Oracle JDK 不是原生支持，需要使用 Linux 二进制兼容层。参见 [https://www.freebsd.org/java/](https://www.freebsd.org/java/)。
+FreeBSD 支持 OracleJDK 与 OpenJDK。OracleJDK 不是原生支持，需要使用 Linux 二进制兼容层。参见 [https://www.freebsd.org/java/](https://www.freebsd.org/java/)。
+
+## JDK
+
+### OracleJDK
 
 
-经过实际测试，使用 OpenJDK 可以运行我的世界官方 Java 服务器。
+`java/linux-oracle-jdk18` 不可用，太久没更新，兼容层所需链接已经失效了。
+
+```sh
+=> Attempting to fetch http://distcache.FreeBSD.org/ports-distfiles/centos/libXtst-1.2.3-1.el7.i686.rpm
+fetch: http://distcache.FreeBSD.org/ports-distfiles/centos/libXtst-1.2.3-1.el7.i686.rpm: No error: 0
+=> Couldn't fetch it - please try to retrieve this
+=> port manually into /usr/ports/distfiles/centos and try again.
+*** Error code 1
+
+Stop.
+make[1]: stopped in /usr/ports/x11/linux-c7-xorg-libs
+*** Error code 1
+
+Stop.
+make: stopped in /usr/ports/java/linux-oracle-jdk18
+```
+
+
+#### 参考文献
+
+- [oracle 账号共享](https://www.cnblogs.com/g012/p/15594372.html)
+
+### OpenJDK
+
+查看支持的版本：
+
+```sh
+root@ykla:~ # pkg search -o jdk
+java/bootstrap-openjdk11       Java Development Kit 11
+java/bootstrap-openjdk17       Java Development Kit 17
+java/bootstrap-openjdk8        Java Development Kit 8
+java/openjdk11                 Java Development Kit 11
+java/openjdk11-jre             Java Runtime Environment 11
+java/openjdk17                 Java Development Kit 17
+java/openjdk17-jre             Java Runtime Environment 17
+java/openjdk18                 Java Development Kit 18
+java/openjdk19                 Java Development Kit 19
+java/openjdk20                 Java Development Kit 20
+java/openjdk21                 Java Development Kit 21
+java/openjdk22                 Java Development Kit 22
+java/openjdk23                 Java Development Kit 23
+java/openjdk8                  Java Development Kit 8
+java/openjdk8-jre              Java Runtime Environment 8
+comms/rxtx                     Native interface to serial ports in Java
+```
+
+以 `java/openjdk23` 为例：
+
+#### 安装 openjdk23
+
+
+```sh
+# pkg ins openjdk23
+```
+
+或者
+
+```sh
+# cd /usr/ports/java/openjdk23
+# make install clean
+```
+
+查看版本：
+
+```sh
+root@ykla:/ # java -version
+openjdk version "23.0.2" 2025-01-21
+OpenJDK Runtime Environment (build 23.0.2+7-1)
+OpenJDK 64-Bit Server VM (build 23.0.2+7-1, mixed mode, sharing)
+```
+
+但是并未配置 `$JAVA_HOME` 变量
+
+```sh
+root@ykla:/ # echo $JAVA_HOME
+
+```
+
+查看安装路径：
+
+```sh
+root@ykla:/ # ls /usr/local/openjdk23/
+/usr/local/openjdk23/bin/     /usr/local/openjdk23/include/ /usr/local/openjdk23/lib/
+/usr/local/openjdk23/conf/    /usr/local/openjdk23/jmods/   /usr/local/openjdk23/man/
+/usr/local/openjdk23/demo/    /usr/local/openjdk23/legal/   /usr/local/openjdk23/release
+```
+
+
+##### 配置环境变量
+
+将
+
+```sh
+export JAVA_HOME="/usr/local/openjdk23"
+export PATH=$JAVA_HOME/bin:$PATH
+```
+
+写入 `~/.bashrc`（bash）、`~/.profile`（不知道什么就写这里吧）、`~/.shrc`（FreeBSD 默认的 sh） 或  `~/.zshrc`（zsh）
+
+刷新环境变量：
+
+```
+root@ykla:/ # . ~/.shrc
+root@ykla:/ # echo $JAVA_HOME
+/usr/local/openjdk23
+root@ykla:/ # echo $PATH
+/usr/local/openjdk23/bin:/sbin:/bin:/usr/sbin:/usr/bin:/usr/local/sbin:/usr/local/bin:/root/bin
+```
