--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.5-jie-java-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.5-jie-java-huan-jing-de-pei-zhi.md
@@ -109,9 +109,26 @@ export PATH=$JAVA_HOME/bin:$PATH
 刷新环境变量：
 
 ```
-root@ykla:/ # . ~/.shrc
+root@ykla:/ # . ~/.shrc # 注意那个 2 个点
 root@ykla:/ # echo $JAVA_HOME
 /usr/local/openjdk23
 root@ykla:/ # echo $PATH
 /usr/local/openjdk23/bin:/sbin:/bin:/usr/sbin:/usr/bin:/usr/local/sbin:/usr/local/bin:/root/bin
 ```
+
+## Eclipse 
+
+### 安装
+
+```
+# pkg ins eclipse
+```
+
+或
+
+```sh
+# cd /usr/ports/java/eclipse
+# make install clean
+```
+
+
