--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.5-jie-java-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.5-jie-java-huan-jing-de-pei-zhi.md
@@ -132,3 +132,84 @@ root@ykla:/ # echo $PATH
 ```
 
 
+
+### 设置中文
+
+点击 `Help`，点击 `Install New Software`。
+
+![](../.gitbook/assets/eclipse1.png)
+
+取消勾选 `Contact all update sites during install to find required software`，然后点击 `Add`：
+
+![](../.gitbook/assets/eclipse2.png)
+
+清除 `Location` 原有内容，加入 `https://mirrors.tuna.tsinghua.edu.cn/eclipse/technology/babel/update-site/latest/`。再点击 `Add`：
+ 
+
+![](../.gitbook/assets/eclipse3.png)、
+
+加载中：
+
+![](../.gitbook/assets/eclipse4.png)
+
+勾选 `Babel Language Packs in Chinese (Simplified)`。点击 `Next`。
+
+![](../.gitbook/assets/eclipse5.png)
+
+
+点击 `Next`。
+
+![](../.gitbook/assets/eclipse6.png)
+
+同意协议：
+
+![](../.gitbook/assets/eclipse7.png)
+
+这里最好先随便点一下底部，再全选，否则会卡死。
+
+![](../.gitbook/assets/eclipse8.png)
+
+重启即可：
+
+![](../.gitbook/assets/eclipse9.png)
+
+![](../.gitbook/assets/eclipse10.png)
+
+#### 参考文献
+
+- [Eclipse 2024.03 安装教程（附中文语言设置教程）](https://www.ittel.cn/archives/35394.html)
+
+### HelloWorld
+
+点击`创建 Java 项目`，项目名 `test`。
+
+![](../.gitbook/assets/eclipse11.png)
+
+右键创建一个 `java 类`，名称 `test`。
+
+![](../.gitbook/assets/eclipse12.png)
+
+写入以下内容
+
+
+```java
+package test;
+
+public class HelloWorld {
+	  public static void main(String[] args) {
+		    System.out.println("Hello World!");
+		  }
+}
+```
+
+点击绿色三角，即可看到输出
+
+![](../.gitbook/assets/eclipse13.png)
+
+
+
+#### 参考文献
+
+- [Eclipse 使用配置全面讲解](https://www.cnblogs.com/xxhxs-21/articles/16417603.html)
+
+
