--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.5-jie-java-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.5-jie-java-huan-jing-de-pei-zhi.md
@@ -185,7 +185,7 @@ root@ykla:/ # echo $PATH
 
 ![](../.gitbook/assets/eclipse11.png)
 
-右键创建一个 `java 类`，名称 `test`。
+右键创建一个`包`，再创建一个 `java 类`，名称 `test`。
 
 ![](../.gitbook/assets/eclipse12.png)
 
