--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.5-jie-java-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.5-jie-java-huan-jing-de-pei-zhi.md
@@ -55,7 +55,7 @@ comms/rxtx                     Native interface to serial ports in Java
 
 以 `java/openjdk23` 为例：
 
-#### 安装 openjdk23
+### 安装 openjdk23
 
 
 ```sh
@@ -95,7 +95,7 @@ root@ykla:/ # ls /usr/local/openjdk23/
 ```
 
 
-##### 配置环境变量
+#### 配置环境变量
 
 将
 
