--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.5-jie-java-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.5-jie-java-huan-jing-de-pei-zhi.md
@@ -118,7 +118,7 @@ root@ykla:/ # echo $PATH
 
 ## Eclipse 
 
-### 安装
+### 安装 eclipse
 
 ```
 # pkg ins eclipse
@@ -130,8 +130,6 @@ root@ykla:/ # echo $PATH
 # cd /usr/ports/java/eclipse
 # make install clean
 ```
-
-
 
 ### 设置中文
 
@@ -179,7 +177,7 @@ root@ykla:/ # echo $PATH
 
 - [Eclipse 2024.03 安装教程（附中文语言设置教程）](https://www.ittel.cn/archives/35394.html)
 
-### HelloWorld
+### HelloWorld!
 
 点击`创建 Java 项目`，项目名 `test`。
 
@@ -212,4 +210,19 @@ public class HelloWorld {
 
 - [Eclipse 使用配置全面讲解](https://www.cnblogs.com/xxhxs-21/articles/16417603.html)
 
+## IntelliJ IDEA
 
+### 安装 IntelliJ IDEA Ultimate
+
+```sh
+# pkg ins intellij-ultimate
+```
+
+或
+
+```sh
+# cd /usr/ports/java/intellij-ultimate
+# make install clean
+```
+
+### 设置中文
