--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.5-jie-java-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.5-jie-java-huan-jing-de-pei-zhi.md
@@ -225,4 +225,29 @@ public class HelloWorld {
 # make install clean
 ```
 
-### 设置中文
+#### 查看安装后说明
+
+
+```
+root@ykla:~ # pkg info -D intellij-ultimate
+intellij-ultimate-2024.3.1.1:
+On install:
+There is a native (faster) file watching support backed by kqueue which is
+enabled by default.  If you encounter problems with watching large
+trees, you can disable it by adding the following property via the menu
+entry Help -> Edit Custom Properties...
+
+      idea.filewatcher.disabled=true
+```
+
+---
+
+系统默认启用了基于 kqueue 的内置（更快的）文件监视支持。若您监视大型目录结构时出现了问题，可以通过菜单路径 `Help`（帮助） -> `Edit Custom Properties...`（编辑自定义属性……） 添加以下属性来禁用该功能：
+
+```ini
+  idea.filewatcher.disabled=true
+```
+
+### 故障排除
+
+- 提示“the file in the editor is not runnable”，待解决
