--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.5-jie-java-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.5-jie-java-huan-jing-de-pei-zhi.md
@@ -248,6 +248,10 @@ entry Help -> Edit Custom Properties...
   idea.filewatcher.disabled=true
 ```
 
+## 使用
+
+似乎无法使用，一直报错 `编辑器中的文件不可运行`，但是 Windows 版本下是正常的，已经报告 [Bug 285130 - Port java/intellij-ultimate always show This file in the editor in not runnable](https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=285130)
+
 ### 故障排除
 
 - 提示“the file in the editor is not runnable”，待解决
