--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.6-jie-qt-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.6-jie-qt-huan-jing-de-pei-zhi.md
@@ -17,7 +17,7 @@
 
 参见 [Bug 236518 - devel/qtcreator unsupported other languages ](https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=236518)
 
-Qt creator 界面语言默认跟随系统，若没有，请在菜单里 Edit -> Preferences -> Environment -> Interface -> Language 手动更改。
+Qt creator 界面语言默认跟随系统，若没有，请在菜单里 `Edit` -> `Preferences` -> `Environment` -> `Interface` -> `Language` 手动更改。
 
 编译器调试器可以不用配置。
 
@@ -38,7 +38,7 @@ libibusplatforminputcontextplugin.so
 
 ### 界面翻译不完整问题
 
-有志愿参与 QT 翻译的人应该关注：
+有志于参与 QT 翻译的人应该关注：
 
 - <https://wiki.qt.io/Qt_Localization>
 - <https://invent.kde.org/qt/qt/qttranslations>
@@ -53,3 +53,4 @@ libibusplatforminputcontextplugin.so
 - 终端汉字显示缺失
 
 待解决
+
