--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.6-jie-qt-huan-jing-de-pei-zhi.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.6-jie-qt-huan-jing-de-pei-zhi.md
@@ -1,6 +1,13 @@
 # 第 22.6 节 QT 环境的配置
 
+
+
 ## 安装 Qt Creator
+
+>**技巧**
+>
+>可能还需要安装 `cmake`。
+
 
 ```sh
 # cd /usr/ports/devel/qtcreator/ && make install clean # Qt Creator 本体
@@ -43,14 +50,31 @@ libibusplatforminputcontextplugin.so
 - <https://wiki.qt.io/Qt_Localization>
 - <https://invent.kde.org/qt/qt/qttranslations>
 
+## 你好世界
+
+![](../.gitbook/assets/Creator3.png)
+
+![](../.gitbook/assets/Creator4.png)
+
+![](../.gitbook/assets/Creator5.png)
+
+![](../.gitbook/assets/Creator6.png)
+
+![](../.gitbook/assets/Creator7.png)
+
+![](../.gitbook/assets/Creator9.png)
+
+## 在终端输出
+
+![](../.gitbook/assets/Creator1.png)
+
+![](../.gitbook/assets/Creator2.png)
 
 ## 故障排除
 
-- 终端打开一次后就闪退并提示 `process exited with code 2.`
 
-待解决
 
-- 终端汉字显示缺失
+### 终端汉字显示缺失
 
 待解决
 
