--- a/di-12-zhang/12.3.md
+++ b/di-12-zhang/12.3.md
@@ -2,6 +2,8 @@
 
 ## 全部源代码结构概览
 
+![FreeBSD 系统源代码](../.gitbook/assets/bsdsrc.png)
+
 ```batch
 PS C:\Users\ykla>  python C:\Users\ykla\Desktop\1.py C:\Users\ykla\Desktop\freebsd-src-main -l 1
 ├── .arcconfig Pharicator 是 FreeBSD 的代码审查工具，这是其配置文件
@@ -51,6 +53,8 @@ PS C:\Users\ykla>  python C:\Users\ykla\Desktop\1.py C:\Users\ykla\Desktop\freeb
 ```
 
 ## 内核结构概览
+
+![FreeBSD 内核源代码](../.gitbook/assets/kernel.png)
 
 ```batch
 PS C:\Users\ykla> python C:\Users\ykla\Desktop\1.py  C:\Users\ykla\Desktop\freebsd-src-main\sys  -l 1
