--- a/di-11-zhang-ji-suan-ji-gai-lun/11.5-shu-jv-ku.md
+++ b/di-11-zhang-ji-suan-ji-gai-lun/11.5-shu-jv-ku.md
@@ -1,225 +1,311 @@
 # 第 11.5 章 MySQL 数据库
 
-
-UNIX 连接 MySQL
-
-```shell
+## UNIX中连接到数据库、执行SQL脚本
+```sh
+# edit FileName
 # mysql -u root -p
+# source FileName.sql
 ```
-
-在修改完用户、权限或主机以后，使用 `FLUSH PRIVILEGES;` 命令刷新是个好习惯，可以确保更改生效。
-
-设置用户可以被某个特定主机连接， `Host = 'xxx'` 是指定能连接的 IP， `%` 就是随意一个主机都能连接。
-
-```sql
-UPDATE mysql.user SET Host = '%' WHERE User = 'root';
-FLUSH PRIVILEGES;
-```
-
 ## 建立数据库
-
 ```sql
-create database xxx;
+create database 数据库名;
 ```
-
-或者
-
-```sql
-create database if not exists xxx;
-```
-
 ## 数据库命名
-
-数据库名称区分大小写。  
-数据库名称最长 64 个字符，别名（alias）最长 256 字符。  
-数据库名不能使用数据库的关键字。
-
+数据库命名区分大小写，最长64字符，别名最长256字符，不能使用数据库关键字。  
+## 数据库重命名
+```sql
+rename database 数据库名 新名字;
+```
 ## 查看数据库
-
 ```sql
 show databases;
 ```
-
-输出的表格：
-
-```sql
-+--------------------+
-| Database           |
-+--------------------+
-| information_schema |
-| jimmy_db           |
-| mysql              |
-| performance_schema |
-| sys                |
-| vskdb              |
-+--------------------+
-6 rows in set (0.00 sec)
-```
-
 ## 进入数据库
-
-`use xxx;`
-
-再进入其他数据库重复上面语句。
-
+```sql
+use 数据库名;
+```
 ## 删除数据库
-
 ```sql
-drop database xxx;
+drop database 数据库名;
 ```
-
-注意不能删除系统数据库：
-
-- information_schema
-- mysql
-- performance_schema
-
-## 编码问题
-
-- GBK: 国家标准扩展码（Guo-Biao Kuozhan）  
-- BIG5：大五码，繁体中文社区最常用的电脑汉字字符集标准。
-
->**警告**
->
->由于设计缺陷，MySQL 的 UTF-8 不是标准完整的 UTF-8，实际上只是 utf8mb3。而我们应该使用 utf8mb4（MySQL 官方推荐）。
-
-## 数据库重命名
-
-```sql
-rename database xxx xxxx;
-```
-
-MySQL 会报错，因为某版本以后不允许改名。SQL 语法写的没问题，别的数据库仍可能支持重命名。
-
 ## 更改数据库字符集
-
 ```sql
 alter database xxx
 default character set UTF-8;
 ```
-
-## 数据类型
-
-范围视有符号和无符号而定，无符号范围更大。根据实际要存储的数据选择合适的数据类型。
-
-**数字类型**：
-
-- TINYINT，1 字节
-- SMALLINT，2 字节
-- MEDIUMINT，3 字节
-- INT，4 字节
-- BIGINT，8 字节
-
-- FLOAT，4 字节，
-- DOUBLE，8 字节
-- DECIMAL(P, D)：  
-  - P 是表示有效数字数的精度。 P 范围是 1 到 65。  
-  - D 是表示小数点后的位数。 D 的范围是 0 到 30。D 肯定是要小于或等于（`<=`）P 的。
-
-想要数据库类型为无符号，请添加 UNSIGNED 属性。
-
-## 建立表格
-
+## SQL数据类型
+`tinyint` (1B), `smallint` (2B), `mediumint` (3B), `int` (4B), `bigint` (8B)  
+`float` (4B), `double` (8B), `decimal(整体位数, 小数点后位数)`  
+`char` 是字符类型，想存字符串用 `char(字符数)`  
+`unsigned+数据类型` 可以设置为无符号的数据类型.  
+## 建立表
 ```sql
-create table if not exists <table_name>
+create table 表名
 (
-  sid tinyint,
-  sage tinyint
+  列名 数据类型,
+  列名 数据类型,
+  列名 数据类型
 );
 ```
-
-输出：
-
-```
-mysql> create table if not exists MyTable
-    -> (
-    ->   sid tinyint,
-    ->   sage tinyint
-    -> );
-Query OK, 0 rows affected (0.06 sec)
-```
-
->**注意**
->
->表格是放在数据库里面的，进入 MySQL 解释器以后必须使用 `use` 命令进入你的数据库
-
-## 查看数据表
-
+## 表重命名
 ```sql
-show tables;
+alter table 表名 rename to 新表名;
 ```
-
-此时可以看到表格已经被创建：
-
-```
-mysql> show tables;
-+-----------------+
-| Tables_in_vskdb |
-+-----------------+
-| MyTable         |
-+-----------------+
-1 row in set (0.00 sec)
-```
-
-## 查看表结构
-
+## 查看数据库有哪些表
 ```sql
-desc <table_name>;
+show 表名;
 ```
-
-输出的表格：
-
-```
-mysql> desc MyTable;
-+-------+---------+------+-----+---------+-------+
-| Field | Type    | Null | Key | Default | Extra |
-+-------+---------+------+-----+---------+-------+
-| sid   | tinyint | YES  |     | NULL    |       |
-| sage  | tinyint | YES  |     | NULL    |       |
-+-------+---------+------+-----+---------+-------+
-2 rows in set (0.01 sec)
-```
-
-- Null：是否允许为空  
-- Extra: 对于该列的备注
-
-## 表约束
-
-### 主键
-
-不能为空，并且唯一。例如姓名就不是主键，因为可以重复。身份证号可以是主键，每个人都不一样。
-
+## 展示表结构
 ```sql
-create table if not exists stu_table
+desc 表名;
+```
+## 显示表全部信息（select后面细说）
+```sql
+select * from 表名
+```
+
+## SQL语法：注释
+```sql
+-- 注释不会被执行
+```
+写脚本加注释是一个好习惯，防止你过一段时间不知道自己写的什么...  
+## 主键、唯一、不许为空、自动编号
+```sql
+create table 表名
 (
-  stu_id tinyint primary key,
-  stu_name char(20) unique,
-  stu_age tinyint not null
+  -- 主键
+  列名 数据类型 primary key,
+  -- 唯一
+  列名 char(20) unique,
+  -- 不许为空
+  列名 数据类型 not null,
+  -- 自动编号
+  列名 数据类型 auto_increment
 );
 ```
+## 信息写入表
+```sql
+insert into TabelName (列名1, 列名2, ...) values(123, "李明", ...);
+```
+## 表新增列
+```sql
+alter table 表名
+add column 列名 数据类型;
+```
+## 表删除列
+```sql
+alter table 表名 drop 列名;
+```
+## 表修改列数据类型
+```sql
+alter table 表名 modify 列名 数据类型;
+```
+## 表添加主键
+```sql
+alter table 表名
+add primary key (新列名);
+```
+## 表删除主键
+```sql
+alter table 表名 drop primary key;
+```
+## 表添加唯一性约束
+```sql
+alter table 表名
+add constraint 唯一约束名 unique (列名);
+```
+## 表删除唯一性约束
+```sql
+alter table 表名
+DROP INDEX 唯一约束名;
+```
+## 表添加外键
+```sql
+alter table 表名 add constraint 外键列名
+foreign key  (外部表格列名) references tstu(sid);
+```
+## 表删除外键
+```sql
+ALTER TABLE 子表名
+DROP FOREIGN KEY 外键名;
+```
+## 外键的概念
+![[MySQL/img/1.png]]
+- 父表：外键引用的表。父表中的被引用列通常是主键（PRIMARY KEY）或唯一键（UNIQUE）。例如上面的黄色表。  
+- 子表：包含外键的表。子表中的外键列指向父表中的主键或唯一键。例如上面的绿色表。  
+### 删除父表数据时失败
+- 原因：子表中存在引用该数据的记录。  
+- 解决：使用 `ON DELETE CASCADE` 或先删除子表中的记录。  
+- `ON DELETE CASCADE` 又是一堆内容，先略过。看[往下数三个章节](##自动维护父表和子表之间的参照完整性)。  
+### 下面是一个父、子表格和外键的示例
+```sql
+-- 创建父表 customers
+CREATE TABLE customers (
+    id INT AUTO_INCREMENT PRIMARY KEY, -- 主键，自动编号
+    name VARCHAR(100) NOT NULL,        -- 客户名
+    email VARCHAR(150) UNIQUE          -- 唯一的电子邮件
+);
 
-以上：
+-- 创建子表 orders
+CREATE TABLE orders (
+    order_id INT AUTO_INCREMENT PRIMARY KEY, -- 主键，订单编号
+    order_date DATE NOT NULL,                -- 订单日期
+    customer_id INT,                         -- 外键列，关联客户 ID
+    amount DECIMAL(10,2),                    -- 订单金额
+    FOREIGN KEY (customer_id) REFERENCES customers(id) -- 定义外键
+    ON DELETE CASCADE -- 当父表记录被删除时，级联删除子表相关记录
+    ON UPDATE CASCADE -- 当父表主键更新时，子表外键自动更新
+);
+```
+1. 创建父表 customers：
+	包含列：
+	id：主键，用于唯一标识客户。
+	name：客户姓名。
+	email：唯一约束，用于防止重复的电子邮件地址。
+2. 创建子表 orders：
+	order_id：主键，用于唯一标识订单。
+	order_date：记录订单日期。
+	customer_id：外键列，用于关联客户。
+	amount：订单金额。
+3. 设置外键：
+	`FOREIGN KEY (customer_id) REFERENCES customers(id)` 表示子表的 customer_id 列引用父表的 id 列。  
+	`ON DELETE CASCADE`	删除父表记录时，子表中引用该记录的行也会被删除。  
+	`ON UPDATE CASCADE` 更新父表主键时，子表外键列会自动更新。  
+## 修改列数据类型
+```sql
+ALTER TABLE 表名
+MODIFY COLUMN 列名 新数据类型;
 
-- `stu_id` 被设置为主键，  
-- `stu_name` 被设置为唯一，  
-- `stu_age` 被设置为禁止为空。
+-- 例如（重设数据类型并不许为空、设置默认值）
+ALTER TABLE book_table
+MODIFY COLUMN BookName CHAR(100) NOT NULL DEFAULT "《书名》";
 
-## 如何执行 MySQL 脚本
-
-在命令行中执行：
-
-```shell
-# mysql -u root -p 密码 < SQL脚本路径
+-- 如果修改的列是外键，必须先删除外键约束，然后修改数据类型，再重新添加外键
+alter table 子表格 drop FOREIGN KEY 外键名;
+alter table 子表格 modify column 列名 新数据类型;
+alter table 子表格 add constraint 外键名 FOREIGN KEY (列名) REFERENCES 父表名(父列名);
+```
+## 修改表信息、删除行
+```sql
+-- 修改表信息
+update 表名
+set 列名 = 新的值
+where 条件;
+```
+注：set你选择了一整列，想修改单个或多个位置的值，就需要where的条件来限定，你是要修改整列，还是其中哪个。类似横竖交叉定位一个坐标点。  
+```sql
+-- 删除行
+DELETE FROM book_table
+WHERE BookNumber < 200;
 ```
 
-数据库中执行：
+下面给几个示例：
+```sql
+update book_table
+set Price = Price * 1.2
+where Publisher = "人民邮电出版社";
+```
+翻译成人话：把表 `book_table` 中 `Publisher` 值为 `"人民邮电出版社"` 的行，Price值全乘以`1.2`（就是增加20%）  
 
 ```sql
-mysql> source test.sql
+DELETE FROM book_table
+WHERE BookNumber < 200;
+
+DELETE FROM book_table
+WHERE author IN ('王阳', '刘天洋');
 ```
+### “Where子句”
+```sql
+...（update或delete)
+where Price < 50;
+...（update或delete)
+WHERE author = '王阳' or author = '刘天洋';
+...（update或delete)
+WHERE name in ('张三', '李四');
+```
+1. 如果 `Price` 值小于50，就...
+2. 如果 `author` 值是王阳或者刘天洋，就...
+3. 如果 `name` 值是张三或者李四，就...
+where接收写在后面的表达式，表达式会运算出一个布尔值。
+### 这里就需要一个知识：SQL运算符
+#### 算术运算符
+- `+` 加法运算符
+- `-` 减法运算符
+- `*` 乘法运算符
+- `/` 除法运算符
+- `%` 取模运算符
+#### 比较运算符
+- `=` 等于（也是赋值运算符）
+- `!=` 不等于
+- `<` 小于
+- `>` 大于
+- `<=` 小于等于
+- `>=` 大于等于
+- `<=>` NULL安全等于，NULL <=> NULL，返回结果是TRUE
+#### 逻辑运算符
+- `and` 两条件都为真才返回真，否则为假
+- `or` 两条件有一个为真就是真，全是假才为假
+- `not` 反转真假
+- `xor` 仅一个条件为真才返回真，否则返回假。
+#### 特殊运算符
+- `in` ：“值在列表中”运算符，用来筛选符合条件的表项，并对符合的项返回一个“真”的布尔值，交给前面update或者delete进行操作。例如 `5 in (1, 3, 5)` 返回真。  
+- `between` 范围匹配：例如 `5 between 1 and 10` 返回真。  
+- `like` 模式匹配：`'abc' like 'a%'` 返回真。百分号在这里类似sh的通配符。  
+- `IS NULL` ”判断表项是否为NULL“：`NULL IS NULL` 返回TRUE。  
+例子：查看书名有没有叫《xxx设计xxx》的  
+```sql
+select * from book_table
+where BookName like '%设计%';
 
-## 参考文献
+select * from book_table
+where BookName like '_____';
+-- 五个下划线代表五个字，返回长度为5个字的书名。
+```
+在一个书籍管理库中会返回类似《mysql数据库设计》的书名。  
+  
+这样一来，上面where后面的东西不就能看懂了？  
 
-- [12.9.2 The utf8mb3 Character Set (3-Byte UTF-8 Unicode Encoding)](https://dev.mysql.com/doc/refman/8.4/en/charset-unicode-utf8mb3.html)
-- [12.9.1 The utf8mb4 Character Set (4-Byte UTF-8 Unicode Encoding)](https://dev.mysql.com/doc/refman/8.4/en/charset-unicode-utf8mb4.html)
-- [为什么MySQL中字符集应该使用utf8mb4而不是utf8](https://www.csudata.com/csu_article/10109)
+## 自动维护父表和子表之间的参照完整性
+**CASCADE** 级联操作：父表记录删除/更新时，子表中相关记录也被删除/更新。  
+**SET NULL** 将子表中的外键列设置为 NULL（要求外键列允许 NULL）。  
+**RESTRICT** 拒绝操作：不允许删除/更新父表中被引用的记录（立即返回错误）。  
+**NO ACTION** 类似 RESTRICT，但延迟到事务结束时才检查完整性。  
+**SET DEFAULT** 设置为默认值，MySQL不支持。  
+
+## SELECT语句
+select后面是列名，写上 `*` 则是选择所有列  
+```sql
+select * from student_table
+where age=(select max(age) from student_table;);
+```
+显示student_table中，年龄为“student_table中‘年龄为最大值’的条目”  
+### 升序输出和降序输出
+ASC升序，DESC降序。  
+```sql
+SELECT student_name FROM student_table DESC;
+```
+`LIMIT a, b` 截取内容。a是索引，从0开始，b是偏移量，写几就偏移几。  
+```sql
+SELECT * from `学生表`
+ORDER BY `学号` desc 
+LIMIT 0,3;
+```
+### 怎么把别的表给带上（连接查询）
+#### 显式连接
+```sql
+SELECT name, score --name来自学生表，score来自分数表
+FROM stu_table -- 表一
+JOIN score_table -- 表二
+ON stu_table.stu_id = score_table.s_id; -- 连接条件
+WHERE name = 'Jack' -- 筛选条件，后面还可以接上AND或OR。
+```
+name取自stu_table  
+score取自score_table
+#### 隐式连接
+```sql
+SELECT name, score
+FROM stu_table, score_table
+WHERE stu_table.stu_id = score_table.s_id
+AND name = 'Jack';
+```
+显然隐式连接更加简洁，所以这里推荐大家使用。
