--- a/di-12-zhang/12.3.md
+++ b/di-12-zhang/12.3.md
@@ -4,6 +4,11 @@
 
 ![FreeBSD 系统源代码](../.gitbook/assets/bsdsrc.png)
 
+图片由 [treesize_free](https://www.jam-software.com/treesize_free ) 生成。
+
+![FreeBSD 系统源代码中的 contrib](../.gitbook/assets/con.png)
+
+
 ```batch
 PS C:\Users\ykla>  python C:\Users\ykla\Desktop\1.py C:\Users\ykla\Desktop\freebsd-src-main -l 1
 ├── .arcconfig Pharicator 是 FreeBSD 的代码审查工具，这是其配置文件
@@ -55,6 +60,8 @@ PS C:\Users\ykla>  python C:\Users\ykla\Desktop\1.py C:\Users\ykla\Desktop\freeb
 ## 内核结构概览
 
 ![FreeBSD 内核源代码](../.gitbook/assets/kernel.png)
+
+![FreeBSD 内核源代码中的 contrib](../.gitbook/assets/sys-con.png)
 
 ```batch
 PS C:\Users\ykla> python C:\Users\ykla\Desktop\1.py  C:\Users\ykla\Desktop\freebsd-src-main\sys  -l 1
