--- a/di-12-zhang/12.3.md
+++ b/di-12-zhang/12.3.md
@@ -6,7 +6,7 @@
 
 图片由 [treesize_free](https://www.jam-software.com/treesize_free ) 生成。
 
-![FreeBSD 系统源代码中的 contrib](../.gitbook/assets/con.png)
+![FreeBSD 系统源代码中的 contrib](../.gitbook/assets/contrib.png)
 
 
 ```batch
