--- a/di-20-zhang-yu-le-yu-jiao-yu/di-20.2-jie-yin-shi-pin-bo-fang-qi.md
+++ b/di-20-zhang-yu-le-yu-jiao-yu/di-20.2-jie-yin-shi-pin-bo-fang-qi.md
@@ -139,16 +139,19 @@ musicpd 配置文件为 `/usr/local/etc/musicpd.conf` 。
 
 第三行把目录设为用户 mpd 所有，不然可能有权限问题。第四行 music 目录存放音乐文件用，设置777是为方便增删文件，自己根据情况设置即可。
 
-修改 `/usr/local/etc/musicpd.conf` 中有关 oss 一节如下：
+修改 `/usr/local/etc/musicpd.conf` ，"Default OSS Device" 一节后面增加一节：
 
 ```conf
 audio_output {
         type            "oss"
-        name            "Default OSS Device"
+        name            "OSS Device（dop mode）"
         device          "/dev/dsp2"     # 指定使用的设备，不需要把 dac或声卡等设置为默认设备，dsp2 专用于播放音乐，默认设备做自己的事就行
         dop             "yes"           # 开启 dop 模式
 }
 ```
+
+注意：可以指定多个输出设备，在各种客户端中可以开启关闭指定的输出设备
+
 
 开启 musicpd 服务
 
@@ -159,9 +162,11 @@ audio_output {
 
 ### 客户端使用
 
-可以使用 ncmpc (命令行）,MaximumMPD（iphone）等客户端，这个不再赘述。
+可以使用 ncmpc (字符界面）,MaximumMPD（iphone）等客户端，客户端有很多。
 
+pc 端 GUI 建议使用 cantata (`pkg install cantata`)
 
+命令行建议安装 mpc （`pkg install musicpc`), 适合用于绑定桌面环境全局快捷键
 
 ## 音频剪辑
 
