--- a/di-12-zhang/12.3.md
+++ b/di-12-zhang/12.3.md
@@ -11,6 +11,7 @@
 
 ```batch
 PS C:\Users\ykla>  python C:\Users\ykla\Desktop\1.py C:\Users\ykla\Desktop\freebsd-src-main -l 1
+\freebsd-src-main
 ├── .arcconfig Pharicator 是 FreeBSD 的代码审查工具，这是其配置文件
 ├── .arclint Lint 检查用
 ├── .cirrus-ci Cirrus CI 指定了安装 pkg 的脚本，CI 用
