--- a/di-12-zhang/12.1.md
+++ b/di-12-zhang/12.1.md
@@ -244,3 +244,133 @@ int main(int argc, char *argv[]) {
     return 0;
 }
 ```
+
+- 递归打印指定目录及其文件文件夹，排除指定文件和文件夹
+
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+#include <dirent.h>
+#include <string.h>
+#include <sys/stat.h>
+#include <unistd.h>
+
+int should_filter(const char *filename) {
+    const char *extensions[] = {
+        ".h", ".so", ".mps", ".gz", ".ko", ".0", ".646", ".esdb", ".mk", ".kbd",
+        ".pem", ".m4", ".fnt", ".kbd",".txt",".html",".gif",".c", ".cat", ".a", ".debug", NULL
+    };
+    
+    for (int i = 0; extensions[i] != NULL; i++) {
+        size_t len = strlen(extensions[i]);
+        size_t filename_len = strlen(filename);
+        if (filename_len > len && strcmp(filename + filename_len - len, extensions[i]) == 0) {
+            return 1;
+        }
+    }
+    
+    return 0;
+}
+
+int should_skip_directory(const char *dirname) {
+    // 检查文件夹名称中是否包含 "UTF-8" 或 "ISO8859-1"
+    if (strstr(dirname, "UTF-8") != NULL || strstr(dirname, "ISO8859-1") != NULL) {
+        return 1; // 符合条件，跳过子文件夹
+    }
+    return 0;
+}
+
+void print_tree(const char *root_dir, const char *indent, int level, int current_level) {
+    if (level != -1 && current_level >= level) {
+        return;
+    }
+
+    DIR *dir = opendir(root_dir);
+    if (!dir) {
+        perror("opendir");
+        return;
+    }
+
+    struct dirent *entry;
+    struct stat statbuf;
+    int count = 0;
+    int filtered_count = 0; // 统计符合过滤条件的文件数量
+
+    // 统计文件和目录的数量
+    while ((entry = readdir(dir)) != NULL) {
+        if (strcmp(entry->d_name, ".") == 0 || strcmp(entry->d_name, "..") == 0) {
+            continue;
+        }
+        if (should_filter(entry->d_name)) {
+            filtered_count++;
+        } else {
+            count++;
+        }
+    }
+    rewinddir(dir);
+
+    int index = 0;
+    int filtered_displayed = 0; // 标记是否已经显示过一次 "……"
+    while ((entry = readdir(dir)) != NULL) {
+        if (strcmp(entry->d_name, ".") == 0 || strcmp(entry->d_name, "..") == 0) {
+            continue;
+        }
+
+        char path[1024];
+        snprintf(path, sizeof(path), "%s/%s", root_dir, entry->d_name);
+        stat(path, &statbuf);
+
+        int is_last = (index == count + filtered_count - 1);
+        const char *filename = entry->d_name;
+
+        // 检查文件夹名称是否包含 "UTF-8" 或 "ISO8859-1"
+        if (should_skip_directory(filename)) {
+            if (!filtered_displayed) {
+                printf("%s%s── ……\n", indent, is_last ? "└" : "├");
+                filtered_displayed = 1; // 已经显示过一次 "……"
+            }
+        } else {
+            if (should_filter(filename)) {
+                if (!filtered_displayed) {
+                    printf("%s%s── ……\n", indent, is_last ? "└" : "├");
+                    filtered_displayed = 1; // 已经显示过一次 "……"
+                }
+            } else {
+                printf("%s%s── %s\n", indent, is_last ? "└" : "├", filename);
+
+                if (S_ISDIR(statbuf.st_mode)) {
+                    char new_indent[1024];
+                    snprintf(new_indent, sizeof(new_indent), "%s%s   ", indent, is_last ? " " : "│");
+                    print_tree(path, new_indent, level, current_level + 1);
+                }
+            }
+        }
+
+        index++;
+    }
+    closedir(dir);
+}
+
+int main(int argc, char *argv[]) {
+    if (argc < 2) {
+        fprintf(stderr, "用法: %s <目录路径> [-l 层级]\n", argv[0]);
+        return 1;
+    }
+    
+    int level = -1; // -1 代表不限制层级
+    if (argc == 4 && strcmp(argv[2], "-l") == 0) {
+        level = atoi(argv[3]);
+    }
+    
+    struct stat statbuf;
+    if (stat(argv[1], &statbuf) != 0 || !S_ISDIR(statbuf.st_mode)) {
+        fprintf(stderr, "无效的目录路径。\n");
+        return 1;
+    }
+    
+    printf("%s\n", argv[1]);
+    print_tree(argv[1], "", level, 0);
+    return 0;
+}
+```
