--- a/di-12-zhang/12.3.md
+++ b/di-12-zhang/12.3.md
@@ -109,8 +109,8 @@
 │   ├── obj 架构特定的目标树，用于从源代码构建 FreeBSD
 │   ├── libexec 用户执行的系统守护进程和实用程序
 │   ├── bin 用户实用程序
-│   ├── tests 
-│   ├── libdata
+│   ├── tests FreeBSD 测试套件，参见 tests(7)
+│   ├── libdata 杂项实用数据文件
 │   ├── src FreeBSD 源代码，参见 ports(7)
 │   ├── ports FreeBSD Ports
 │   ├── lib 用户库文件
