--- a/di-12-zhang/12.1.md
+++ b/di-12-zhang/12.1.md
@@ -37,7 +37,7 @@ if __name__ == "__main__":
 
 C 语言版本：
 
-```c
+```cpp
 #include <stdio.h>
 #include <stdlib.h>
 #include <dirent.h>
@@ -169,7 +169,7 @@ PS C:\Users\ykla>  python C:\Users\ykla\Desktop\1.py C:\Users\ykla\Desktop\freeb
 
 C 语言版本：
 
-```c
+```cpp
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
@@ -248,7 +248,7 @@ int main(int argc, char *argv[]) {
 - 递归打印指定目录及其文件文件夹，排除指定文件和文件夹
 
 
-```c
+```cpp
 #include <stdio.h>
 #include <stdlib.h>
 #include <dirent.h>
