--- a/di-12-zhang/12.3.md
+++ b/di-12-zhang/12.3.md
@@ -3,14 +3,16 @@
 
 ## 概览
 
-为了方便说明，仅列出三级目录：
+为了方便说明，仅列出三级目录和重要文件：
 
 参见 [hier(7)](https://man.freebsd.org/cgi/man.cgi?query=hier&sektion=7&manpath=freebsd-release-ports) 
 
 ```sh
 /
+|—— COPYRIGHT FreeBSD 版权信息
 ├── boot 操作系统引导过程中使用的程序和配置文件。
 │   ├── fonts 终端字体
+│   ├── device.hints 用于控制驱动程序的内核变量，参见 device.hints(5)
 │   ├── uboot 空目录
 │   ├── firmware pkg kmod 会安装至此，同 fwget
 │   ├── loader.conf.d loader 配置文件的子项
@@ -60,12 +62,36 @@
 ├── dev 存放设备文件和特殊文件，参见 devfs(5)
 │   ├── reroot reboot -r 用
 │   ├── input 存放输入设备相关的设备文件
+│   ├── nvd0 NVMe 第一块固态硬盘
+│   ├── nvd0p1 第一块固态硬盘的第一个分区
+│   ├── mmcsd0 第一张存储卡
+│   ├── dri 显卡字节设备节点，参见 drm(7)
+│   ├── drm 显卡节点，参见 drm(7)
 │   ├── fd 用于访问当前进程的文件描述符。目录下 0、1、2 对应标准输入、标准输出和标准错误，参见 fdescfs(5)
 │   ├── usb USB 设备相关的设备节点
 │   ├── gpt GPT 硬盘的设备节点，参见 gpt(8)
 │   ├── iso9660  ISO 9660 文件系统的设备节点，如光盘
 │   └── pts 伪终端设备，参见 pts(4)
 ├── etc 基本系统配置文件和脚本
+│   ├── auto_master autofs 配置文件，参见 automount(8)
+│   ├── crontab root 的 crontab 文件
+│   ├── devfs.conf 启动时的设备参数
+│   ├── freebsd-update.conf 基本系统更新工具 freebsd-update 的配置文件，参见 freebsd-update(8)
+│   ├── fstab 文件分区表，参见 fstab(5)
+│   ├── hosts hosts 文件，优先与 DNS 的本地 IP 域名映射表
+│   ├── inetd.conf 配置 BSD inetd，参见 inetd(8)
+│   ├── localtime 本地时区文件，参见 ctime(3)。在我的系统中，localtime 链接到了 /usr/share/zoneinfo/Asia/Shangha
+│   ├── login.conf ​登录类功能数据库，参见 login.conf(5)
+│   ├── machine-id 系统的 UUID，dbus 用
+│   ├── motd.template tty 登录后显示的信息，参见 motd(5)
+│   ├── ntp.conf NTP 客户端配置文件，参见 ntpd(8)
+│   ├── pf.conf PF 防火墙配置文件，参见 pf(4)
+│   ├── rc.conf 系统 RC，参见 rc.conf(5)
+│   ├── resolv.conf DNS 解析，参见 resolv.conf(5)
+│   ├── sysctl.conf 内核状态默认值，参见 sysctl.conf(5)
+│   ├── syslog.conf 系统日志配置文件
+│   ├── ttys 创建 tty 的规则文件，参见 getty(8)
+│   ├── wpa_supplicant.conf 连接 WiFi 的配置文件，参见 wpa_supplicant.conf(5)
 │   ├── dma DMA 邮件代理相关，参见 dma(8)
 │   ├── pam.d 可插拔认证模块（PAM）相关的配置文件，参见 pam.d(5)
 │   ├── ssl 存储与 SSL/TLS 相关的文件，如证书、密钥
@@ -101,6 +127,7 @@
 ├── home 普通用户家目录
 │   └── ykla 普通用户 ykla
 ├── bin 基本的 BSD 用户工具，参见 intro(1)
+|—— sys 链接到 /usr/src/sys
 ├── usr 用户工具与程序
 │   ├── share 架构无关文件
 │   ├── local 用户安装的软件，通常是通过 ports(7) 或 pkg(7) 安装的
