--- a/di-12-zhang/12.3.md
+++ b/di-12-zhang/12.3.md
@@ -9,7 +9,7 @@
 
 ```sh
 /
-|—— COPYRIGHT FreeBSD 版权信息
+├── COPYRIGHT FreeBSD 版权信息
 ├── boot 操作系统引导过程中使用的程序和配置文件。
 │   ├── fonts 终端字体
 │   ├── device.hints 用于控制驱动程序的内核变量，参见 device.hints(5)
