--- a/di-12-zhang/12.3.md
+++ b/di-12-zhang/12.3.md
@@ -122,7 +122,7 @@
 ├── home 普通用户家目录
 │   └── ykla 普通用户 ykla
 ├── bin 基本的 BSD 用户工具，参见 intro(1)
-|—— sys 链接到 /usr/src/sys
+├── sys 链接到 /usr/src/sys
 ├── usr 用户工具与程序
 │   ├── share 架构无关文件
 │   ├── local 用户安装的软件，通常是通过 ports(7) 或 pkg(7) 安装的
