--- a/di-12-zhang/12.3.md
+++ b/di-12-zhang/12.3.md
@@ -104,8 +104,8 @@
 │   ├── gss GSSAPI 相关文件、含 Kerberos 5
 │   ├── periodic 存放定期执行的维护脚本，由 cron 调用。参见 periodic.conf(5)
 │   ├── mail Sendmail 相关文件
-│       ├── aliases 用于投递系统邮件的地址
-│       └── mailer.conf mailwrapper(8) 配置文件
+│   │    ├── aliases 用于投递系统邮件的地址
+│   │    └── mailer.conf mailwrapper(8) 配置文件
 │   ├── kyua Kyua 测试框架的全局配置文件。参见 kyua(1)、kyua.conf(5)
 │   ├── unbound Unbound 配置文件
 │   ├── ntp NTP 相关，参见 ntp.conf(5)、ntpd(8) 
@@ -137,7 +137,7 @@
 │   ├── libdata 杂项实用数据文件
 │   ├── src FreeBSD 源代码，参见 ports(7)
 │   ├── ports FreeBSD Ports
-│       └── distfiles 下载的源码包存放的地方
+│   │    └── distfiles 下载的源码包存放的地方
 │   ├── lib 用户库文件
 │   └── sbin 用户系统管理实用程序
 ├── lib /bin、/sbin 的库文件
