--- a/di-18-zhang-shu-mei-pai-yu-riscv/18.9-radxax4.md
+++ b/di-18-zhang-shu-mei-pai-yu-riscv/18.9-radxax4.md
@@ -15,10 +15,24 @@ Radxa X4 是 x86 开发版，处理器是英特尔 N100。全文基于 Radxa X4 
 # pkg install drm-61-kmod
 ```
 
+或 
+
+```sh
+# cd /usr/ports/graphics/drm-61-kmod/ 
+# make install clean
+```
+
 - 安装无线网卡驱动：
 
 ```sh
 # pkg install wifi-firmware-rtw89-kmod
+```
+
+或
+
+```
+# cd /usr/ports/net/wifi-firmware-rtw89-kmod/ 
+# make install clean
 ```
 
 ## Radxa X4 FreeBSD 15.0 dmesg
