--- a/di-18-zhang-shu-mei-pai-yu-riscv/18.9-radxax4.md
+++ b/di-18-zhang-shu-mei-pai-yu-riscv/18.9-radxax4.md
@@ -2,7 +2,7 @@
 
 Radxa X4 是 x86 开发版，处理器是英特尔 N100。全文基于 Radxa X4 16G 内存 + 128G emmc 款。
 
-请安装 FreeBSD 15.0-CURRENT。
+请安装 FreeBSD 15.0-CURRENT。15.0 有 Bug，主频上不了 3Ghz。参见 [Bug 271548 - Alder lake CPU not running at full speed](https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=271548)
 
 - FreeBSD 14.2-RELEASE 会有奇怪的 bug：若使用 emmc 款（且 FreeBSD 系统安装到 emmc 中），则固态硬盘的分区不能超过 5 个，否则 zfs 无法启动。
 - FreeBSD 14.2-RELEASE 似乎无法睿频变频
