--- a/di-18-zhang-shu-mei-pai-yu-riscv/18.9-radxax4.md
+++ b/di-18-zhang-shu-mei-pai-yu-riscv/18.9-radxax4.md
@@ -22,6 +22,12 @@ Radxa X4 是 x86 开发版，处理器是英特尔 N100。全文基于 Radxa X4 
 # make install clean
 ```
 
+配置显卡：
+
+```
+# sysrc -f /etc/rc.conf kld_list+=i915kms
+```
+
 - 安装无线网卡驱动：
 
 ```sh
